--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ box-shadow: 0px 0px 20px black;
 }
 .skills{
   background-color: black;
- background-image: url('sb4.webp');
+ background-image: url('bgimg1.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
 
